# traccc

core/include/algorithms/: component_connection.hpp  measurement_creation.hpp  measurements_creation.hpp  spacepoint_formation.hpp  spacepoints_formation.hpp
core/include/algorithms/detail/: sparse_ccl.hpp
core/include/definitions/: algebra.hpp  primitives.hpp
core/include/edm/: cell.hpp  cluster.hpp  measurement.hpp
core/include/geometry/: pixel_segmentation.hpp
examples/cpu/: CMakeLists.txt  device_example.cpp  funct_par_example.cpp  par_example.cpp  seq_example.cpp  seq_single_module.cpp
examples/cpu/io_dec/: CMakeLists.txt  io_dec_example.cpp  reader.hpp  tmp_edm.hpp  writer.hpp
examples/cpu_gpu/: par_example.cpp
io/include/csv/: csv_io.hpp
tests/io/: csv_io_tests.cpp
